Add sample file for test
Add sample file for test

Change-Id: I8d8b21aee914d9495e8c7076e77316ac24f29e78

--- a/gnss-service/test/uBloxParser/CMakeLists.txt
+++ b/gnss-service/test/uBloxParser/CMakeLists.txt
@@ -22,13 +22,13 @@
 project(uBloxParser)
 cmake_minimum_required(VERSION 2.6.0)
 
-message(STATUS "UBLOXPARSER")
+message(STATUS "uBloxParser")
 
 set(gnss-service_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/../../gnss-service/api")
 
 include_directories(${gnss-service_INCLUDE_DIRS})
 
-add_executable(UBLOXPARSER
+add_executable(uBloxParser
     main.cpp
     uBloxParser.cpp
     uBloxParser.h
