Push the final code into branch
Push the final code into branch

Change-Id: I2ee02b651dba6819cf91e982e181b8764bffa616
Type: Code Improvement

--- a/gnss-service/CMakeLists.txt
+++ b/gnss-service/CMakeLists.txt
@@ -29,8 +29,11 @@ option(WITH_GPSD
     "Use GPSD as source of GPS data" OFF)
 
 option(WITH_NMEA
-    "Use NMEA as source of GPS data" OFF)    
+    "Use NMEA as source of GPS data" OFF)
     
+option(WITH_UBLOX
+    "Use UBLOX Binary as source of GPS data" OFF)
+
 option(WITH_REPLAYER
     "Use REPLAYER as source of GPS data" ON)
 
