--- a/logger/test/CMakeLists.txt
+++ b/logger/test/CMakeLists.txt
@@ -22,6 +22,7 @@ message(STATUS "TEST-LOGGER")
 message(STATUS "WITH_DLT = ${WITH_DLT}")
 message(STATUS "WITH_GPSD = ${WITH_GPSD}")
 message(STATUS "WITH_NMEA = ${WITH_NMEA}")
+message(STATUS "WITH_UBLOX = ${WITH_UBLOX}")
 message(STATUS "WITH_SENSORS = ${WITH_SENSORS}")
 message(STATUS "IMU_TYPE = ${IMU_TYPE}")
 message(STATUS "WITH_REPLAYER = ${WITH_REPLAYER}")
@@ -66,6 +67,8 @@ if(WITH_GPSD)
     set(GNSS_LIBRARIES "gnss-service-use-gpsd")
 elseif(WITH_NMEA)
     set(GNSS_LIBRARIES "gnss-service-use-nmea")
+elseif(WITH_UBLOX)
+    set(GNSS_LIBRARIES "gnss-service-use-ublox")
 elseif(WITH_REPLAYER)
     set(GNSS_LIBRARIES "gnss-service-use-replayer")
 else()
