--- a/gnss-service/test/CMakeLists.txt
+++ b/gnss-service/test/CMakeLists.txt
@@ -23,6 +23,7 @@ message(STATUS "GNSS-SERVICE-CLIENT")
 message( STATUS "WITH_DLT = ${WITH_DLT}")
 message( STATUS "WITH_GPSD = ${WITH_GPSD}")
 message( STATUS "WITH_NMEA = ${WITH_NMEA}")
+message( STATUS "WITH_UBLOX = ${WITH_UBLOX}")
 message( STATUS "WITH_REPLAYER = ${WITH_REPLAYER}")
 message(STATUS "WITH_DEBUG = ${WITH_DEBUG}")
 
@@ -38,9 +39,11 @@ add_executable(gnss-service-client ${SRCS})
 if(WITH_GPSD)
     set(LIBRARIES gnss-service-use-gpsd gps)
 elseif(WITH_NMEA)
-    set(LIBRARIES gnss-service-use-nmea rt)     
+    set(LIBRARIES gnss-service-use-nmea rt)
+elseif(WITH_UBLOX)
+    set(LIBRARIES gnss-service-use-ublox rt)
 elseif(WITH_REPLAYER)
-    set(LIBRARIES gnss-service-use-replayer) 
+    set(LIBRARIES gnss-service-use-replayer)
 else()
     message(STATUS "Invalid cmake options!")
 endif()
