--- a/gnss-service/test/compliance-test/CMakeLists.txt
+++ b/gnss-service/test/compliance-test/CMakeLists.txt
@@ -23,6 +23,7 @@ message(STATUS "GNSS-SERVICE-COMPLIANCE-TEST")
 message( STATUS "WITH_DLT = ${WITH_DLT}")
 message( STATUS "WITH_GPSD = ${WITH_GPSD}")
 message( STATUS "WITH_NMEA = ${WITH_NMEA}")
+message( STATUS "WITH_UBLOX = ${WITH_UBLOX}")
 message( STATUS "WITH_REPLAYER = ${WITH_REPLAYER}")
 message(STATUS "WITH_DEBUG = ${WITH_DEBUG}")
 
@@ -39,9 +40,11 @@ if(WITH_GPSD)
     pkg_check_modules(GPSD libgps>=2.94)
     set(LIBRARIES gnss-service-use-gpsd gps)
 elseif(WITH_NMEA)
-    set(LIBRARIES gnss-service-use-nmea rt)    
+    set(LIBRARIES gnss-service-use-nmea rt)
+elseif(WITH_UBLOX)
+    set(LIBRARIES gnss-service-use-ublox rt)
 elseif(WITH_REPLAYER)
-    set(LIBRARIES gnss-service-use-replayer) 
+    set(LIBRARIES gnss-service-use-replayer)
 else()
     message(STATUS "Invalid cmake options!")
 endif()
